--- a/.github/workflows/pygbag.yml
+++ b/.github/workflows/pygbag.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Checkout
       run: |
             python -m pip install pygbag
-            python -m pygbag --build $GITHUB_WORKSPACE/main.py
+            python -m pygbag --build $GITHUB_WORKSPACE/main.py --ume-block=0
     - name : "Upload to GitHub pages branch gh-pages"
       uses: JamesIves/github-pages-deploy-action@4.1.7
       with:
